[package]
name = "pfandbot-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
tower-http = { version = "0.5", features = ["cors"] }
azalea = { git = "https://github.com/azalea-rs/azalea" }
azalea-auth = { git = "https://github.com/azalea-rs/azalea" }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
rand = "0.9.2"
